<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AboutActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_marginTop="8dp"
        android:layout_width="500dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:foregroundGravity="center"
        android:src="@drawable/sunuip" />
    <TextView
        android:id="@+id/tv_about_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/img_item_photo"
        android:text="@string/about_name"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_about_name"
        android:text="@string/about_email"
        android:textSize="18sp"
        android:gravity="center" />
    <LinearLayout
        android:id="@+id/data1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/email"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hoby"
            android:layout_marginStart="25dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/hoby_detail"
            android:layout_marginStart="25dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/data2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/data1"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:layout_marginStart="25dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/status_detail"
            android:layout_marginStart="25dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/data3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/data2"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/target_menikah"
            android:layout_marginStart="25dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/target_menikah_detail"
            android:layout_marginStart="25dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/data4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/data3"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motto"
            android:layout_marginStart="25dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/motto_detail"
            android:layout_marginStart="25dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>


</RelativeLayout>