<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.DetailedActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/colorAccent"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/tv_place_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/img_item_photo"
            app:layout_constraintTop_toBottomOf="@+id/img_item_photo"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/name" />
        <TextView
            android:id="@+id/tv_place_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_place_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_place_name"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/black" />
        <TextView
            android:id="@+id/tv_place_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tv_place_location"
            app:layout_constraintTop_toBottomOf="@+id/tv_place_location"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:justificationMode="inter_word"
            android:text="@string/description"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            tools:targetApi="m" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>